added new syn api
